--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Rock Paper Scissor</h1>
+    <p>
+      Open the console by pressing CTRL+Shift+J or Command+Option+J and play the
+      game.
+    </p>
+    <script src="script.js"></script>
+  </body>
 </html>
