added style, colors UI, font and header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h1>Rock Paper Scissor</h1>
-    <p>
-      Open the console by pressing CTRL+Shift+J or Command+Option+J and play the
-      game.
-    </p>
+    <div class="container">
+      <header id="header">
+        <h1>
+          <span>Rock</span>
+          <span>Paper</span>
+          <span>Scissors</span>
+        </h1>
+      </header>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
