centered player pick buttoms, added rules modal and rules button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
 			</div>
       </div>
 
+      <div class="rules" id="rules">
+        <img src="./img/image-rules.svg" alt="rules of the game">
+        <button id="close">
+          <img src="./img/icon-close.svg" alt="close rules">
+        </button>
+      </div>
+      <button class="btn-rules" id="open">Rules</button>
+
+    </div>
       <footer class="footer">
         <p>Made by vsilagy</p>
         <a href="http://github.com/vsilagy">
@@ -81,7 +90,6 @@
           />
         </a>
       </footer>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
