--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
       </div>
       <div id="game">
         <h1 class="big-text" id="game-msg">What Bucko!?</h1>
-        <button class="btn-play" id="reset">Try Again</button>
+        <button class="btn-play" id="reset">Play Again</button>
       </div>
     </div>
 
     <footer class="footer">
-      <p>Made by vsilagy</p>
+      <p>© 2022 vsilagy</p>
       <a href="http://github.com/vsilagy">
         <img
           src="./img/GitHub-Mark.png"
