changed the padding and margins from rem/px to em

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <button class="btn-play" id="play-again">Play Again</button>
         </div>
         <div>
-          <h2>Computer Picked</h2>
+          <h2>CPU Picked</h2>
           <button class="btn-circle btn-rock" id="computer-choice">
             <span class="wrapper">
               <img src="./img/icon-rock.svg" alt="rock icon" />
