--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
     <title>Rock Paper Scissors</title>
   </head>
