--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
     <title>Rock Paper Scissors</title>
   </head>
@@ -85,7 +84,7 @@
     </div>
 
     <footer class="footer">
-      <p>© 2022 vsilagy</p>
+      <p>© 2022 Made by vsilagy</p>
       <a href="http://github.com/vsilagy">
         <img
           src="./img/GitHub-Mark.png"
