change the game to best of 3, change the github logo to svg, update README, update Screenshot

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Rock Paper Scissors</title>
   </head>
@@ -28,7 +29,6 @@
           <p id="computer">0</p>
         </div>
       </header>
-
       <main id="main">
         <button class="btn-circle btn-paper pick" id="paper">
           <span class="wrapper">
@@ -46,7 +46,6 @@
           </span>
         </button>
       </main>
-
       <div class="rules" id="rules">
         <img src="./img/image-rules.svg" alt="rules of the game" />
         <button id="close">
@@ -54,7 +53,6 @@
         </button>
       </div>
       <button class="btn-rules" id="open">Rules</button>
-
       <div class="result" id="result">
         <div>
           <h2>You Picked</h2>
@@ -82,15 +80,10 @@
         <button class="btn-play" id="reset">Play Again</button>
       </div>
     </div>
-
     <footer class="footer">
       <p>© 2022 Made by vsilagy</p>
       <a href="http://github.com/vsilagy">
-        <img
-          src="./img/GitHub-Mark.png"
-          alt="github logo"
-          class="github-logo"
-        />
+        <img src="./img/github.svg" alt="github logo" class="github-logo" />
       </a>
     </footer>
     <script src="script.js"></script>
